# zcalc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/zcalc/: __init__.py  __main__.py  cli.py  nets.py  stackup.py
stackups/: JLC04161H-7628.yaml
tests/: example.yaml  test_netlist.py  test_stackup.py  test_version.py
